# BilibiliLiveRecorder

./: .gitignore  CMakeLists.txt  json.hpp  main.cpp  vcpkg.json
DataStruct/: DataStruct.h
ImWindow/: ImWindow.cpp  ImWindow.h
Network/Protocol/: CommandParse.cpp  CommandParser.h  Protocol.cpp  Protocol.h  ProtocolPackageMaker.cpp  ProtocolPackageMaker.h
Network/Protocol/Buf/: Buffer.hpp
Network/Protocol/PackageMaker/: PackageMaker.cpp  PackageMaker.h
Network/Protocol/Type/: OperatorType.h  PackageHeader.h
Network/WS/: WSClient.cpp  WSClient.h  WSSClient.cpp  WSSClient.h
Network/WS/Client/: WSClient.cpp  WSClient.h  WebSocketCore.cpp  WebSocketCore.h
Network/WS/Type/: ExceptionType.h
Protocol/: Protocol.cpp  Protocol.h
Utils/: Interface.cpp  Interface.h
Utils/ExpectionHelper/: ExpectionHelper.cpp  ExpectionHelper.h
UtilsHelper/: Interface.cpp  Interface.h
